deploy/k8s/aws/namespace.yaml
# Copyright (c) 2026 Data-Blitz Inc. All rights reserved.
# License: Proprietary. See NOTICE.md.
# Author: Paul Harvener.

apiVersion: v1
kind: Namespace
metadata:
  name: deposition-demo
