deploy/k8s/aws/couchdb-service.yaml
# Copyright (c) 2026 Data-Blitz Inc. All rights reserved.
# License: Proprietary. See NOTICE.md.
# Author: Paul Harvener.

apiVersion: v1
kind: Service
metadata:
  name: couchdb
spec:
  selector:
    app: couchdb
  ports:
    - name: http
      port: 5984
      targetPort: 5984
